allprojects {
    group 'com.wilmol'
    version '1.0'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'jacoco'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenCentral()
    }

    ext {
        kafkaVersion = '2.2.0'
    }

    dependencies {
        // https://mvnrepository.com/artifact/com.google.guava/guava
        compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
        // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
        // https://projectlombok.org/setup/gradle
        compileOnly 'org.projectlombok:lombok:1.18.6'
        annotationProcessor 'org.projectlombok:lombok:1.18.6'

        // https://mvnrepository.com/artifact/junit/junit
        testCompile group: 'junit', name: 'junit', version: '4.12'
        // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core
        testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '2.1'
    }

    jacocoTestReport {
        reports {
            xml.enabled true
            html.enabled true
            csv.enabled true
        }
    }
}
